--- a/alert-service/src/main/resources/email-templates/verify.html
+++ b/alert-service/src/main/resources/email-templates/verify.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<p>Hi {{user}},<BR/>
+<p>Hi sir/madam,<BR/>
     Thank you for signign up in our platform. We are glad to your are part of the network
 
     <BR/><BR/>
